Closed Bug 615908 Opened 14 years ago Closed 14 years ago

comparison between signed and unsigned integer expressions in UnhookTextRunFromFrames

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla5

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file, 1 obsolete file)

layout/generic/nsTextFrameThebes.cpp:
 In function ‘void UnhookTextRunFromFrames(gfxTextRun*, nsTextFrame*)’:
455: warning: comparison between signed and unsigned integer expressions

problems seem to stem from:
struct TextRunUserData {
  TextRunMappedFlow* mMappedFlows;
  PRInt32            mMappedFlowCount;

  PRUint32           mLastFlowIndex;
};
Attached patch proposal (obsolete) — Splinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #494424 - Flags: review?(matspal)
Attachment #494424 - Flags: approval2.0?
OS: Mac OS X → All
Hardware: x86 → All
Comment on attachment 494424 [details] [diff] [review]
proposal

There's now a redundant cast in "PRUint32(userData->mMappedFlowCount)".

r=mats
Attachment #494424 - Flags: review?(matspal) → review+
Attachment #494424 - Attachment is obsolete: true
Attachment #494974 - Flags: review+
Attachment #494974 - Flags: approval2.0?
Attachment #494424 - Flags: approval2.0?
Comment on attachment 494974 [details] [diff] [review]
fix inside DEBUG_roc too :)

This should land after we branch for Gecko 2.0 / Firefox 4.
Attachment #494974 - Flags: approval2.0? → approval2.0-
http://hg.mozilla.org/mozilla-central/rev/e54e13ff337a
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [fixed-in-cedar]
Target Milestone: --- → mozilla2.2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: