Bug 615908 comparison between signed and unsigned integer expressions in UnhookTextRunFromFrames r=mats